<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateNoteActivity">

    <ImageView
        android:id="@+id/backBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:clickable="true"
        android:contentDescription="@string/back"
        android:focusable="true"
        android:onClick="backButton"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/accent" />

    <ImageView
        android:id="@+id/doneBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:clickable="true"
        android:contentDescription="@string/done"
        android:focusable="true"
        android:onClick="doneButton"
        android:src="@drawable/ic_tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/accent" />

    <EditText
        android:id="@+id/NoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@null"
        android:ellipsize="end"
        android:hint="@string/notes_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/ColorDarkBlack"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backBut" />

    <EditText
        android:id="@+id/noteDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@null"
        android:hint="@string/notes_desc"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/ColorDarkBlack"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tags" />

    <TextView
        android:id="@+id/dateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="@dimen/_10sdp"
        android:textColor="@color/ColorGray"
        android:textColorHint="@color/ColorGray"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NoteTitle"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:backgroundTint="@color/accent"
        android:contentDescription="@string/delete"
        android:onClick="deleteNote"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_delete"
        app:tint="@color/white" />

    <Spinner
        android:id="@+id/spinnerTags"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:backgroundTint="@color/black"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/tags_are_empty_please_add"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/dateTime" />

    <TextView
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:text=""
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerTags" />

</androidx.constraintlayout.widget.ConstraintLayout>