<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateTagActivity">

    <ImageView
        android:id="@+id/backBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:clickable="true"
        android:contentDescription="@string/back"
        android:onClick="backButton"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/accent"
        android:focusable="true" />

    <ImageView
        android:id="@+id/doneBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:clickable="true"
        android:contentDescription="@string/done"
        android:onClick="doneButton"
        android:src="@drawable/ic_tick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/accent"
        android:focusable="true" />

    <EditText
        android:id="@+id/tagName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@null"
        android:ellipsize="end"
        android:hint="@string/notes_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/ColorDarkBlack"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backBut" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_notes_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tagName" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteTagButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:backgroundTint="@color/accent"
        android:onClick="deleteTag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_delete"
        app:tint="@color/white"
        android:contentDescription="@string/delete" />
</androidx.constraintlayout.widget.ConstraintLayout>