<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.TagActivity">

    <TextView
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openNotesT"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/notes"
        android:textColor="@color/accent"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:onClick="openTagsT"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/tags"
        android:textColor="@color/accent"
        android:textColorHint="@color/black"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:backgroundTint="@color/accent"
        android:onClick="newTag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white"
        android:contentDescription="@string/new_notes" />
</androidx.constraintlayout.widget.ConstraintLayout>